--- a/sienning-front/public/index.html
+++ b/sienning-front/public/index.html
@@ -27,6 +27,7 @@
     <title>Léna ENG</title>
   </head>
   <body>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
